# hoverModel

./: .gitattributes  .gitignore  README.md  SOFTWARE_ENGINEERING.md  body.py  components.py  control_sources.py  default_backend.py  demo.py  demo_outputs.py  demo_runner.py  environment.py  genesis_backend.py  main.py  physics.py  pyproject.toml  simulation_outputs.py  state.py  test_demo.py  test_hovermodel.py  video_demo.py  visualization.py
assets/: hoverBody_ground_effect.mtl  hoverBody_main.mtl
spike/genesis-demo/: README.md  sphere_collision_demo.py
spike/genesis-friction-evaluation/: README.md  default_friction_test.py  friction_test_boxes_lifting.py
