[project]
name = "hovermodel"
version = "0.1.0"
description = "A reinforcement learning environment simulation for a hovercraft with 3D visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "open3d",
    "numpy"
]

[tool.setuptools]
py-modules = ["main", "demo", "physics", "visualization", "environment", "control_sources", "demo_outputs"]
